Examen front certi

--- a/src/app/pages/paciente/paciente-edicion/paciente-edicion.component.html
+++ b/src/app/pages/paciente/paciente-edicion/paciente-edicion.component.html
@@ -17,7 +17,7 @@
     </mat-form-field>
   
     <mat-form-field class="example-full-width">
-      <input matInput placeholder="DNI" required formControlName="dni" type="number">
+      <input matInput placeholder="DNI" required formControlName="dni" type="tel">
     </mat-form-field>
   
     <mat-form-field class="example-full-width">
@@ -25,7 +25,7 @@
     </mat-form-field>
   
     <mat-form-field class="example-full-width">
-      <input matInput placeholder="Teléfono" required formControlName="telefono" type="number" >
+      <input matInput placeholder="Teléfono" required formControlName="telefono" type="tel" >
     </mat-form-field>
   
     <mat-form-field class="example-full-width">
