--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,16 @@
 <div class="example-container">
 
-  <mat-toolbar color="primary" class="example-toolbar">
+  <mat-toolbar color="primary" class="example-toolbar" *ngIf="loginService.estaLogeado()">
     <button mat-icon-button (click)="sidenav.toggle()">
       <mat-icon *ngIf="!sidenav.opened">menu</mat-icon>
       <mat-icon *ngIf="sidenav.opened">close</mat-icon>
     </button>
 
     <h1 class="example-app-name">MEDIAPP</h1>
-
     <span class="example-spacer"></span>
-
+    <span class="pull-right" style="font-size: 15px !important">Usuario : {{usuario}}</span>
+    <span>&nbsp;</span>
+    <span style="font-size: 15px !important"> Perfil : {{perfil}}</span>
     <button mat-icon-button [matMenuTriggerFor]="menu">
       <mat-icon>more_vert</mat-icon>
     </button>
@@ -19,7 +20,7 @@
         <mat-icon>account_box</mat-icon>
         <span>Mi Perfil</span>
       </button>
-      <button mat-menu-item (click)="sidenav.opened = false">
+      <button mat-menu-item (click)="sidenav.opened = false" (click)="loginService.cerrarSesion()">
         <mat-icon>exit_to_app</mat-icon>
         <span>Cerrar Sesión</span>
       </button>
@@ -30,8 +31,18 @@
     <mat-sidenav #sidenav style="width: 200px">
       <!-- <img src="assets/logohospital.png" width="128" style="margin-left: 20px"> -->
       <img src="assets/logohospital.png" width="128" style="margin-left: 17%">
+      <div *ngFor="let m of menus">
+        <button mat-menu-item (click)="sidenav.toggle()" routerLink="{{m.url}}" style="cursor: pointer;">
+          <mat-icon>{{m.icono}}</mat-icon>
+          <span>{{m.nombre}}</span>
+        </button>
+      </div>
 
-      <button mat-menu-item (click)="sidenav.toggle()" routerLink="/buscar" style="cursor: pointer">
+
+
+
+
+      <!-- <button mat-menu-item (click)="sidenav.toggle()" routerLink="/buscar" style="cursor: pointer">
         <mat-icon>search</mat-icon>
         <span>Buscar</span>
       </button>
@@ -69,7 +80,7 @@
       <button mat-menu-item (click)="sidenav.toggle()" routerLink="/reporte" style="cursor: pointer">
         <mat-icon>assessment</mat-icon>
         <span>Reportes</span>
-      </button>
+      </button> -->
     </mat-sidenav>
 
     <mat-sidenav-content>
